beta 6
abcCreator
=======

the dialog to name a song will no longer crash